# src/main/java/de/tum/cit/aet/ai/dto/AnalyzeJobDescriptionRequestDTO.java
@@ -1,0 +1,5 @@
+package de.tum.cit.aet.ai.dto;
+
+import java.util.UUID;
+
+public record AnalyzeJobDescriptionRequestDTO(UUID jobId, String title, String jobDescriptionEN, String jobDescriptionDE) {}
